fixed navbar center selected plant
previously disabled the navbar buttons as the width was 100%. The selected plant text is currently slightly off-centered, should fix later if needed

--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -1,5 +1,5 @@
 .show-selected-plant {
-    position: absolute;
     width: 100%;
+    margin: auto;
     color: white;
 }
